--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -45,12 +45,18 @@ nav > p {
 
 }
 
+.cards-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 4 cards per row */
+  gap: 16px; /* Adjust the gap between cards as needed */
+}
+
+
 .card {
   display: flex;
   height: 168px;
   width: 470px;
   margin-top: 40px;
-  margin-left: 40px;
 }
 
 .card--image {
@@ -75,6 +81,8 @@ nav > p {
   letter-spacing: 17%;
 
 }
+
+
 
 .card--info {
   display: flex;
